# scexaodata-VAMPIRES-PDI-subtraction

./: CMakeLists.txt  README.md  filelist.csv  vamppdi.conf
scripts/: runWPcycle  vamppdi.conf
src/: csv_reader.c
